Bug 560017 Failed build js/src/jsgcchunk.cpp on Solaris r=jimb